samples/_failures_safe/1761149488_d86591_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0daf2a02.c: In function ‘main’:
./samples/SAFE/__tmp_0daf2a02.c:134:9: error: expected expression at end of input
  134 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_0daf2a02.c:134:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0daf2a02.c:134:9: error: expected declaration or statement at end of input
